# arcface-tf2

./: .dockerignore  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: pyproject.toml
