[tool.poetry]
name = "arcface-tf2"
version = "0.1.0"
description = ""
authors = ["oq-Yuki-po <o.yukinko0715@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "2.7.3"
Pillow = "^9.2.0"
numpy = "^1.23.1"
pandas = "^1.4.3"
opencv-python = "^4.6.0"
tqdm = "^4.64.0"
typer = {extras = ["all"], version = "^0.6.1"}
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
